Fixed margins, gaps, text alignmnent Began creation of event cards Stylized h5, added margin-bottom for h4-5, updated color for p and h4-5

--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -1,5 +1,5 @@
-/* Begin: fix the navbar to top */
-/* The sticky class is added to the header with JS when it reaches its scroll position */
+/*Begin: fix the navbar to top */
+/*The sticky class is added to the header with JS when it reaches its scroll position */
 /*.sticky {*/
 /*    position: fixed;*/
 /*    top: 0;*/
@@ -10,15 +10,16 @@
 /*    padding-top: 83px;*/
 /*}*/
 
-.content {
-    padding-top: 80px;
-}
+/*.content {*/
+/*    padding-top: 80px;*/
+/*}  */
+/* End: fix the navbar to top */
 
 .header {
     position: fixed;
     width: 100%;
 }
-/* End: fix the navbar to top */
+
 
 .form-lightgray {
     background-color: #4D4F5B;
