--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -16,6 +16,7 @@ a {
 
 p {
     font-size: 20px;
+    color: #4D4F5B;
 }
 
 p, h1, h2, h3, h4, h5, h6 {
@@ -26,6 +27,15 @@ p, h1, h2, h3, h4, h5, h6 {
 h4 {
     font-size: 28px;
     font-weight: bold;
+    margin-bottom: 24px;
+    color: #4D4F5B;
+}
+
+h5 {
+    font-size: 25px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    color: #70A9A1;
 }
 
 a > p {
@@ -39,4 +49,9 @@ a > p {
 
 .form-control:focus {
     box-shadow: none;
+}
+
+.card {
+    padding: 0;
+    /*width: 300px;*/
 }
